--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -3,7 +3,7 @@
     <h2><%= pluralize(@user.errors.count, "error") %>prohibited this user from being saved:</h2>
     <p>There were problems with the following fields:</p>
     <ul>
-    <% @user.errors.full_messages.each do |msg| %>
+    <% object.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
